--- a/etc/lml.conf
+++ b/etc/lml.conf
@@ -79,7 +79,7 @@ datadir=/var/lib/lml
 [vsphere]
 server=devvcs01.iscout.local
 username=vCenterService
-password=P46t74qBxm1dJxHIa53G
+password=********************
 # if you run this on VMA or on Windows then you can try to use pass through auth.
 # However, this is an untested feature and might not work.
 passthroughauth=0
