config for Force Boot, minor changes to match my production config

--- a/etc/lml.conf
+++ b/etc/lml.conf
@@ -21,7 +21,7 @@ redirect_unknown_to_default=1
 error_main= <<EOF
 #menu hshift 5
 menu width 80
-menu background is24-boot-splash.png
+menu background menu/is24-boot-splash.png
 menu color title        * #FFFFFFFF *
 menu color border       * #00000000 #00000000 none
 menu color sel          0 #ffffffff #00000000 none
@@ -31,7 +31,7 @@ menu color hotsel       0 #ffffffff #00000000 none
 menu vshift 5
 #menu rows 13
 
-default vesamenu.c32
+ui vesamenu.c32
 noescape 1
 allowoptions 0
 prompt 0
@@ -47,6 +47,16 @@ error_item= <<EOF
 Please fix these issues and press ENTER to reboot and try again
         endtext
 EOF
+# local path to pxelinux.cfg directory, needed for forceboot autodetection
+# This is the local path for the URI given to pxelinux as TFTP path prefix
+# don't include the pxelinux.cfg directory itself!
+pxelinuxcfg_path=/var/www/boot
+
+[forceboot]
+# force boot profiles
+# each profile simply maps to a pxelinux configuration file
+server=menu/server.centos5.txt
+server6=menu/server.sl6.txt
 
 [hostrules]
 # hostnames must match this Perl pattern
@@ -95,3 +105,5 @@ contactuserid_minuid=1000
 expires_field=Expires
 # use european date format for expiry date field
 expires_european=1
+# define a field that contains info about forced PXE boots
+forceboot_field=Force Boot
