new config option to decide if missing host dirs constitute an error or not

--- a/etc/lml.conf
+++ b/etc/lml.conf
@@ -77,6 +77,9 @@ hostskel=file:///var/svn/dev/config/hostskel
 renamehostdirs=1
 # create new host dirs for new hostnames
 createhostdirs=1
+# is it OK if the hostdirs are missing?
+failonmissinghostdir=0
+
 
 [modifyvm]
 # modify the VM so that it can boot only via PXE
