* index.pl should not break if vm.conf and lab.conf are missing * dump merged configuration instead of single config file * new config option to disable certificate validation

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -103,6 +103,8 @@ password=********************
 # if you run this on VMA or on Windows then you can try to use pass through auth.
 # However, this is an untested feature and might not work.
 passthroughauth=0
+# disable certificate checking
+disablecertificatevalidation=0
 # limit LML to handle only VMs that have a NIC in the following network names
 networks=<<EOF
 arc.int
