Apache config works now * Independant of actual path of /boot stuff * Load cgi module for prefor and mpm * Forbid access to tools subdir * index.pl as DirectoryIndex

--- a/src/apache/lab-manager-light.conf
+++ b/src/apache/lab-manager-light.conf
@@ -1,16 +1,35 @@
 # Note: disable these lines to disable LML. These lines connect pxelinux requests that contain
-#	a UUID to the LML scripts. If this is disabled then the default pxelinux configuration
-#	will be used instead
+#       a UUID to the LML scripts. If this is disabled then the default pxelinux configuration
+#       will be used instead
 
-<Directory /var/www/boot/pxelinux.cfg/>
-	RewriteEngine	on
-	RewriteCond	%{REQUEST_FILENAME} !-f
-	RewriteRule	([^-]{8}-.*-.*-.*)$ ../lml/pxelinux.pl?uuid=$1
-</Directory>
-<Directory /var/www/boot/lml>
-	Options +ExecCGI
-	AddHandler cgi-script .pl 
+RewriteEngine   on
+RewriteCond     %{REQUEST_FILENAME} !-f
+RewriteRule     /boot/pxelinux.cfg/([^-]{8}-.*-.*-.*)$ /lml/pxelinux.pl?uuid=$1 [PT]
+
+<IfModule mpm_prefork_module>
+        <IfModule !cgi_module>
+                LoadModule cgi_module modules/mod_cgi.so
+        </IfModule>
+</IfModule>
+
+<IfModule mpm_worker_module>
+        <IfModule !cgid_module>
+                LoadModule cgid_module modules/mod_cgid.so
+        </IfModule>
+</IfModule>
+
+
+Alias /lml /usr/lib/lml
+<Directory /usr/lib/lml>
+        Options +ExecCGI
+        AddHandler cgi-script .pl
+        DirectoryIndex index.pl
+        Allow From All
 </Directory>
 
-#RewriteLogLevel 2
+<Directory /usr/lib/lml/tools>
+        Deny From All
+</Directory>
+
+
 #RewriteLog /tmp/rewrite.log
