Remove forceboot entries from default config because there is no easy way to get rid of them

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -61,9 +61,8 @@ pxelinuxcfg_path=/var/www/boot
 
 [forceboot]
 # force boot profiles
-# each profile simply maps to a pxelinux configuration file
-server=menu/server.centos5.txt
-server6=menu/server.sl6.txt
+# each profile simply maps to a pxelinux configuration file, for example:
+# server=menu/server.centos5.txt
 
 [hostrules]
 # hostnames must match this Perl pattern
