New feature to block booting on fatal errors * Catch die() calls and create pxelinux output
Bugfixes:
* Correctly set home directory if $HOME is not set
* Improved error messages for missing LML datadir
* Improved error handling for pxelinux.cfg if called without parameter
* Remove some IS24 internals from default configuration
* Added Debug output for used config files and $HOME handling

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -28,7 +28,6 @@ redirect_unknown_to_default=1
 error_main= <<EOF
 #menu hshift 5
 menu width 80
-menu background menu/is24-boot-splash.png
 menu color title        * #FFFFFFFF *
 menu color border       * #00000000 #00000000 none
 menu color sel          0 #ffffffff #00000000 none
@@ -54,6 +53,34 @@ error_item= <<EOF
 Please fix these issues and press ENTER to reboot and try again
         endtext
 EOF
+# template for fatal errors. MESSAGE will be replaced by the actual error message. Used with showfatalerrors=1
+fatalerror_template=<<EOF
+menu width 80
+menu color title        * #FFFFFFFF *
+menu color border       * #00000000 #00000000 none
+menu color sel          0 #ffffffff #00000000 none
+menu color unsel        0 #ffffffff #00000000 none
+menu color hotsel       0 #ffffffff #00000000 none
+
+menu vshift 10
+menu title A FATAL ERROR HAS HAPPENED
+#menu rows 13
+
+ui vesamenu.c32
+noescape 1
+allowoptions 0
+prompt 0
+timeout 0
+
+label error
+	menu label MESSAGE
+        kernel reboot.c32 --warm
+        text help
+Please stand up and call for help!
+        endtext
+
+EOF
+
 # local path to pxelinux.cfg directory, needed for forceboot autodetection
 # This is the local path for the URI given to pxelinux as TFTP path prefix
 # don't include the pxelinux.cfg directory itself!
@@ -94,6 +121,8 @@ forcenetboot=1
 [lml]
 # where to keep lml internal data
 datadir=/var/lib/lml
+# should fatal errors be shown to the PXE boot client, this uses the fatalerror_template
+showfatalerrors=0
 
 [vsphere]
 server=devvcs01.iscout.local
