Fix menu colors for fatal error template

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -56,15 +56,15 @@ EOF
 # template for fatal errors. MESSAGE will be replaced by the actual error message. Used with showfatalerrors=1
 fatalerror_template=<<EOF
 menu width 80
-menu color title        * #FFFFFFFF *
+menu color title        * #ff000000 #ffffffff
 menu color border       * #00000000 #00000000 none
-menu color sel          0 #ffffffff #00000000 none
-menu color unsel        0 #ffffffff #00000000 none
-menu color hotsel       0 #ffffffff #00000000 none
-
-menu vshift 10
+menu color sel          * #ff000000 #ffffffff none
+menu color unsel        * #ff000000 #ffffffff none
+menu color hotsel       * #ff000000 #ffffffff none
+menu color help         * #ff000000 #ffffffff none
+menu vshift 5
 menu title A FATAL ERROR HAS HAPPENED
-#menu rows 13
+menu rows 2
 
 ui vesamenu.c32
 noescape 1
