New features to trigger fatal error for tests and to disallow invalid force boot targets * Use fatalerror as force boot target to trigger a fatal error

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -88,6 +88,7 @@ pxelinuxcfg_path=/var/www/boot
 
 [forceboot]
 # force boot profiles
+# NOTE: fatalerror is used internally, but you can override it at the loss of the ability to trigger a fake fatal error
 # each profile simply maps to a pxelinux configuration file, for example:
 # server=menu/server.centos5.txt
 
@@ -122,7 +123,10 @@ forcenetboot=1
 # where to keep lml internal data
 datadir=/var/lib/lml
 # should fatal errors be shown to the PXE boot client, this uses the fatalerror_template
+# fatalerror is a builtin force boot target to trigger a fatal error for testing purposes
 showfatalerrors=0
+# should we fail on invalid forceboot targets
+failoninvalidforceboot=1
 
 [vsphere]
 server=devvcs01.iscout.local
