--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -149,5 +149,7 @@ contactuserid_minuid=1000
 expires_field=Expires
 # use european date format for expiry date field
 expires_european=1
-# define a field that contains info about forced PXE boots
+# Define a field that contains info about forced PXE boots (ON|OFF)
 forceboot_field=Force Boot
+# Define a field where the target for the forceboot is given
+forceboot_target_field=Force Boot Target
