--- a/src/DEBIAN/control
+++ b/src/DEBIAN/control
@@ -4,7 +4,7 @@ Priority: optional
 Section: web
 Architecture: all
 Maintainer: Schlomo Schapiro <lml@schlomo.schapiro.org>
-Depends: apache2 | httpd-cgi, perl, libsvn-perl, libconfig-inifiles-perl (>= 2.72) , libdatetime-format-flexible-perl , libjson-perl
+Depends: apache2 | httpd-cgi, perl, subversion, libsvn-perl, libconfig-inifiles-perl (>= 2.72) , libdatetime-format-flexible-perl , libjson-perl
 Homepage: https://github.com/ImmobilienScout24/lab-manager-light
 Description: Lab Manager Light
  LML extends existing virtualization farms like VMware vSphere and
