New test for DHCP, adjust other stuff to help

--- a/test/data/test.conf
+++ b/test/data/test.conf
@@ -4,4 +4,4 @@ datadir = test/temp
 
 [dhcp]
 hostsfile = test/temp/dhcp-hosts.conf
-triggercommand = echo triggercommand
+triggercommand = touch test/temp/triggercommand.txt
