Implementing test for new handle_forceboot method

--- a/test/data/test.conf
+++ b/test/data/test.conf
@@ -5,3 +5,7 @@ datadir = test/temp
 [dhcp]
 hostsfile = test/temp/dhcp-hosts.conf
 triggercommand = touch test/temp/triggercommand.txt
+
+[forceboot]
+default=menu/server.sl6.txt
+server=menu/server.sl6.txt
