Finish modularization of pxelinux.pl * Fix several regression bugs * Fix unit tests * Add VM_ID to LAB data (for screenshot)

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -21,9 +21,12 @@ display_filter_vm_path=^[^/]+/vm/(.*)$
 
 [pxelinux]
 # hosts not known to vSphere should be redirected to the default config (pxelinux.cfg/default)
-# this changes the HTTP code from 400 to 302->default
+# this changes the HTTP code from 404 to 302->default
 # the purpose is to prevent pxelinux.cfg from scanning all the other potential configurations (MAC and IP address)
 redirect_unknown_to_default=1
+# redirect target for unknown VMs and if a VM passes all LML checks and is allowed to boot.
+# think twice before changing this as pxelinux.0 uses that as a built-in default in case pxelinux.pl throws a 500
+default_redirect=pxelinux.cfg/default
 # pxelinux configuration for error screen
 error_main= <<EOF
 #menu hshift 5
