New screenshot feature * show screenshot in popup * vmscreenshot.pl is REST API for screenshot * use vSphere credentials of LML

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -117,6 +117,8 @@ datadir=/var/lib/lml
 showfatalerrors=0
 # should we fail on invalid forceboot targets
 failoninvalidforceboot=1
+# enable vmscreenshot.pl
+vmscreenshot=1
 
 [vsphere]
 server=devvcs01.iscout.local
