--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -117,8 +117,16 @@ datadir=/var/lib/lml
 showfatalerrors=0
 # should we fail on invalid forceboot targets
 failoninvalidforceboot=1
+
+[vmscreenshot]
 # enable vmscreenshot.pl
-vmscreenshot=1
+enabled=1
+# allow server_push
+server_push=1
+# how long to wait between pushing images
+push_delay=5
+# how many images to push in a single request (push_delay * push_max = Amount of time you can watch a VM)
+push_max=2
 
 [vsphere]
 server=devvcs01.iscout.local
