Create unit test for VMscreenshot.pm * Extend test data * Mock HTTP service with local file * Adjust other tests for changed test data

--- a/test/data/test.conf
+++ b/test/data/test.conf
@@ -9,3 +9,8 @@ triggercommand = touch test/temp/triggercommand.txt
 [forceboot]
 default=menu/server.sl6.txt
 server=menu/server.sl6.txt
+
+#[vsphere]
+#server=file://test/data
+#username=test
+#password=test
