Various little fixes and improvements * Add test png file * pin push_max to 25 in test config * Retrieve only required properties vom vSphere in get_vm_data in an   attempt to boost performance (did not help :-()) * Set special header for last image in LML::VMscreenshot::render

--- a/test/data/test.conf
+++ b/test/data/test.conf
@@ -10,7 +10,5 @@ triggercommand = touch test/temp/triggercommand.txt
 default=menu/server.sl6.txt
 server=menu/server.sl6.txt
 
-#[vsphere]
-#server=file://test/data
-#username=test
-#password=test
+[vmscreenshot]
+push_max=25
