New feature: Specify different redirects for OK / Other VM and Non-VM

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -20,13 +20,17 @@ appenddomain=arc.int
 display_filter_vm_path=^[^/]+/vm/(.*)$
 
 [pxelinux]
-# hosts not known to vSphere should be redirected to the default config (pxelinux.cfg/default)
-# this changes the HTTP code from 404 to 302->default
-# the purpose is to prevent pxelinux.cfg from scanning all the other potential configurations (MAC and IP address)
-redirect_unknown_to_default=1
-# redirect target for unknown VMs and if a VM passes all LML checks and is allowed to boot.
+# redirect target if a VM passes all LML checks and is allowed to boot.
 # think twice before changing this as pxelinux.0 uses that as a built-in default in case pxelinux.pl throws a 500
+# set to 0 to disable redirecting
 default_redirect=pxelinux.cfg/default
+# redirect target for non-VMs (anything that LML can't find in the vSphere inventory)
+# set to 0 to disable redirecting
+unknown_redirect=pxelinux.cfg/default
+# redirect target for VMs that don't match our networks
+# set to 0 to disable redirecting
+othervm_redirect=pxelinux.cfg/default
+
 # pxelinux configuration for error screen
 error_main= <<EOF
 #menu hshift 5
@@ -138,6 +142,7 @@ passthroughauth=0
 # disable certificate checking
 disablecertificatevalidation=0
 # limit LML to handle only VMs that have a NIC in the following network names
+# the names can be also a perl regex (^ and $ is added, don't use them!)
 networks=<<EOF
 arc.int
 EOF
