New feature: builtin qrdata forceboot target to display vmdata as QR

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -33,7 +33,6 @@ othervm_redirect=pxelinux.cfg/default
 
 # pxelinux configuration for error screen
 error_main= <<EOF
-#menu hshift 5
 menu width 80
 menu color title        * #FFFFFFFF *
 menu color border       * #00000000 #00000000 none
@@ -60,7 +59,31 @@ error_item= <<EOF
 Please fix these issues and press ENTER to reboot and try again
         endtext
 EOF
+
+# template for qrdata forceboot target, URL will be replaced with the URL to the QR image
+qrdata_template=<<EOF
+# push the menu out of the screen
+menu vshift -1
+menu width 80
+menu background URL
+menu color title        * #FFFFFFFF *
+menu color border       * #00000000 #00000000 none
+menu color sel          0 #ffffffff #00000000 none
+menu color unsel        0 #ffffffff #00000000 none
+menu color hotsel       0 #ffffffff #00000000 none
+
+menu vshift 5
+#menu rows 13
+
+ui vesamenu.c32
+noescape 1
+allowoptions 0
+prompt 0
+timeout 0
+EOF
+
 # template for fatal errors. MESSAGE will be replaced by the actual error message. Used with showfatalerrors=1
+# set a force boot target of fatalerror to trigger a fatal error for testing purposes
 fatalerror_template=<<EOF
 menu width 80
 menu color title        * #ff000000 #ffffffff
@@ -158,3 +181,8 @@ expires_european=1
 forceboot_field=Force Boot
 # Define a field where the target for the forceboot is given
 forceboot_target_field=Force Boot Target
+
+[http]
+# here you can set some options for http
+# base_url= can be set to the http://<host>/<path> that should be prefixed to all LML scripts
+# if it is not set, then LML will try to guess it.
