Fixes, but still not working properly.

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -75,6 +75,10 @@ menu color hotsel       0 #ffffffff #00000000 none
 menu vshift 5
 #menu rows 13
 
+label dummy
+        menu label 
+        kernel bin/reboot.c32 --warm
+
 ui vesamenu.c32
 noescape 1
 allowoptions 0
