--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -54,7 +54,7 @@ EOF
 error_title=ERROR REPORT FOR VM
 # pxelinux configuration for error item on error screen
 error_item= <<EOF
-        kernel reboot.c32 --warm
+        kernel reboot.c32
         text help
 Please fix these issues and press ENTER to reboot and try again
         endtext
@@ -77,7 +77,7 @@ menu vshift 5
 
 label dummy
         menu label 
-        kernel bin/reboot.c32 --warm
+        kernel bin/reboot.c32
 
 ui vesamenu.c32
 noescape 1
@@ -108,7 +108,7 @@ timeout 0
 
 label error
 	menu label MESSAGE
-        kernel reboot.c32 --warm
+        kernel reboot.c32
         text help
 Please stand up and call for help!
         endtext
