New Feature: Set Force Boot to unmanaged to tell LML to keep off the VM * Force Boot or Force Boot Target evaluated * Such VMs will see a Fatal Error * LML will not modify such VMs (e.g. forcenetboot)
Also fix regression bug that would break on VM templates and add some
more tests

Bump Version

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -123,6 +123,7 @@ pxelinuxcfg_path=/var/www/boot
 [forceboot]
 # force boot profiles
 # NOTE: fatalerror is used internally, but you can override it at the loss of the ability to trigger a fake fatal error
+# NOTE: unmanaged is used internally and you cannot override it here. Unmanaged VMs should NOT PXE boot hence LML triggers a fatal error for them
 # each profile simply maps to a pxelinux configuration file, for example:
 # server=menu/server.centos5.txt
 
