First prototype of vm creation dialog and refactoring of vm-create.pl

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -164,6 +164,12 @@ push_max=25
 server=devvcs01.iscout.local
 username=vCenterService
 password=********************
+# default datacenter as target for new vms
+default_vm_datacenter=MY_DATACENTER
+# default network(s) for new vms each line one network (no wildcards)
+default_vm_networks=<<EOF
+arc.int
+EOF
 # if you run this on VMA or on Windows then you can try to use pass through auth.
 # However, this is an untested feature and might not work.
 passthroughauth=0
