Beginning gpxeproxy script and adding needed apache rewrite rule for it

--- a/src/apache/lab-manager-light.conf
+++ b/src/apache/lab-manager-light.conf
@@ -5,6 +5,7 @@
 RewriteEngine   on
 RewriteCond     %{REQUEST_FILENAME} !-f
 RewriteRule     /boot/pxelinux.cfg/([^-]{8}-.*-.*-.*)$ /lml/pxelinux.pl?uuid=$1 [PT]
+RewriteRule     (.*\.gpxe)$ /lml/gpxeproxy.pl?filename=$1&%{QUERY_STRING} [PT]
 
 <IfModule mpm_prefork_module>
         <IfModule !cgi_module>
