Everything under /boot should be handled via pxelinuxproxy.pl. /lml/* scripts should be ignored!

--- a/src/apache/lab-manager-light.conf
+++ b/src/apache/lab-manager-light.conf
@@ -5,7 +5,7 @@
 RewriteEngine   on
 RewriteCond     %{REQUEST_FILENAME} !-f
 RewriteRule     /boot/pxelinux.cfg/([^-]{8}-.*-.*-.*)$ /lml/pxelinux.pl?uuid=$1 [PT]
-RewriteRule     (.*\.pxelinux)$ /lml/pxelinuxproxy.pl?filename=$1&%{QUERY_STRING} [PT]
+RewriteRule     ^(/boot/.*\.pxelinux)$ /lml/pxelinuxproxy.pl?filename=$1&%{QUERY_STRING} [PT]
 
 <IfModule mpm_prefork_module>
         <IfModule !cgi_module>
@@ -18,7 +18,6 @@ RewriteRule     (.*\.pxelinux)$ /lml/pxelinuxproxy.pl?filename=$1&%{QUERY_STRING
                 LoadModule cgid_module modules/mod_cgid.so
         </IfModule>
 </IfModule>
-
 
 Alias /lml /usr/lib/lml
 <Directory /usr/lib/lml>
