Finishing pxelinux-proxy.pl script to handle kickstart installations without DNS queries * Adding gimp file for placeholder image * Adding example configuration for placeholder settings * Adding better regex for triggering the proxy script with redirects (including pxelinux.cfg/default as well) * Adding new configuration read function to get paramter settings as hashref

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -19,6 +19,11 @@ appenddomain=arc.int
 # this removes the leading <datacenter-name>/vm>/ stuff from the display name
 display_filter_vm_path=^[^/]+/vm/(.*)$
 
+# define a list of variables here. The pxelinux-proxy.pl script will take the KEY as
+# the name of the TOKEN (in *.pxelinux files) and the VALUE as the token replacement
+[proxy_variables]
+kickstart_host=kickstart.arc.int
+
 [pxelinux]
 # redirect target if a VM passes all LML checks and is allowed to boot.
 # think twice before changing this as pxelinux.0 uses that as a built-in default in case pxelinux.pl throws a 500
