Adding detonation and delete butto to WebUI * Adding new icons with references * Refactoring vm-control.pl to fit the UI needs * JSON answers from vm-control.pl * Apache PAM auth configuration for restricted scripts

--- a/src/apache/lab-manager-light.conf
+++ b/src/apache/lab-manager-light.conf
@@ -31,5 +31,13 @@ Alias /lml /usr/lib/lml
         Deny From All
 </Directory>
 
+# adding restriction to restricted scripts if module pam auth is available
+<mod_auth_pam>
+    <Directory /usr/lib/lml/restricted>
+        AuthName "Lab Manager Light - Authentication"
+        AuthType Basic
+        Require valid-user
+    </Directory>
+</mod_auth_pam>
 
 #RewriteLog /tmp/rewrite.log
