--- a/src/apache/lab-manager-light.conf
+++ b/src/apache/lab-manager-light.conf
@@ -32,12 +32,12 @@ Alias /lml /usr/lib/lml
 </Directory>
 
 # adding restriction to restricted scripts if module pam auth is available
-<mod_auth_pam>
+<IfModule auth_pam_module>
     <Directory /usr/lib/lml/restricted>
         AuthName "Lab Manager Light - Authentication"
         AuthType Basic
         Require valid-user
     </Directory>
-</mod_auth_pam>
+</IfModule>
 
 #RewriteLog /tmp/rewrite.log
