Removing apache configuration for restricted area

--- a/src/apache/lab-manager-light.conf
+++ b/src/apache/lab-manager-light.conf
@@ -31,13 +31,6 @@ Alias /lml /usr/lib/lml
         Deny From All
 </Directory>
 
-# adding restriction to restricted scripts if module pam auth is available
-<IfModule auth_pam_module>
-    <Directory /usr/lib/lml/restricted>
-        AuthName "Lab Manager Light - Authentication"
-        AuthType Basic
-        Require valid-user
-    </Directory>
-</IfModule>
+# If you wan't to restrict the restricted scripts: Please configure it by yourself!
 
 #RewriteLog /tmp/rewrite.log
