A complete refactoring of vm-create.pl for fully automated vm creation * Refactoring * Introducing new config parameters

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -134,7 +134,7 @@ pxelinuxcfg_path=/var/www/boot
 
 [hostrules]
 # hostnames must match this Perl pattern
-pattern=^[a-z]{6}[0-9]{3}$
+pattern=^[a-z]{6}[0-9]{2}$
 # check hostnames also in the following domains to prevent conflicts. Never list DHCP.APPENDDOMAIN here!
 dnschecknew=1
 dnscheckzones= <<EOF
@@ -202,3 +202,13 @@ forceboot_target_field=Force Boot Target
 # here you can set some options for http
 # base_url= can be set to the http://<host>/<path> that should be prefixed to all LML scripts
 # if it is not set, then LML will try to guess it.
+
+[network_policy]
+catchall=vm_catchall_network
+# if hostname and network pattern will match, the network will be assigned on vm creation
+hostname_pattern=^[a-z]{6}
+network_pattern=[a-z]{6}$
+
+[vm_spec]
+host_announcement=http://host.arc.int/hostname-package/hostname-%s.arc.int.rpm
+host_spec=http://host.arc.int/configviewer/hosts/%s/data/vmProfile/esx.json
