Possibility to deactivate dns checks via configuration

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -135,8 +135,9 @@ pxelinuxcfg_path=/var/www/boot
 [hostrules]
 # hostnames must match this Perl pattern
 pattern=^[a-z]{6}[0-9]{3}$
+# deactivate dns checks. Only do this, if you really need it
+dnscheck=1
 # check hostnames also in the following domains to prevent conflicts. Never list DHCP.APPENDDOMAIN here!
-dnschecknew=1
 dnscheckzones= <<EOF
 some.zone
 some.other.zone
