New feature to globally disable proxy settings. Workaround for the problem that LWP ignores no_proxy for HTTPS.

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -155,6 +155,10 @@ datadir=/var/lib/lml
 showfatalerrors=0
 # should we fail on invalid forceboot targets
 failoninvalidforceboot=1
+# globally disable proxy
+# It seems like LWP ignores the no_proxy setting for HTTPS. ATM the only workaround seems to be to
+# disable proxy settings globally.
+disableproxy=0
 
 [vmscreenshot]
 # enable vmscreenshot.pl
