Improve default configuration with more documentation Add new sections appenddomains, dnscheckzones, network_assignment

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -5,6 +5,10 @@
 #
 # INSTEAD, CREATE ADDITIONAL CONFIGURATION FILES LIKE /etc/lml/*.conf
 #
+# The configuration is read with http://search.cpan.org/dist/Config-IniFiles, see there for what you can
+# use in this config file. Where we say list of we mean that you can provide a single value OR a list (with <<EOF syntax).
+# Templates are always given as multi-line value with <<EOF
+#
 [dhcp]
 # trigger the DHCP server with this command after changing the host list
 triggercommand=sudo /usr/sbin/service dhcp3-server force-reload
@@ -13,6 +17,14 @@ hostsfile=/etc/dhcp3/dhcp-hosts.conf
 # this is the domain we need to append to the VM name to construct a valid FQDN
 appenddomain=arc.int
 # NOTE: DNS is managed entirely through the DHCP integration, hence no configuration items here.
+# List of network labels for which we actually have to manage the DHCP server.
+managed_networks=<<EOF
+ARC_NETWORK
+EOF
+
+[appenddomains]
+# Per-network setting of appenddomain, overriding the default from [dhcp]
+# example: ARC_NETWORK=dyn.arc.int
 
 [gui]
 # The GUI should filter the VM path, () denotes the part displayed to the user
@@ -21,8 +33,9 @@ display_filter_vm_path=^[^/]+/vm/(.*)$
 
 # define a list of variables here. The pxelinux-proxy.pl script will take the KEY as
 # the name of the TOKEN (in *.pxelinux files) and the VALUE as the token replacement
+# Variables look like %%%kickstart_host%%%, variable names are case-insensitive
 [proxy_variables]
-kickstart_host=kickstart.arc.int
+# Example: kickstart_host=kickstart.arc.int
 
 [pxelinux]
 # redirect target if a VM passes all LML checks and is allowed to boot.
@@ -137,11 +150,17 @@ pxelinuxcfg_path=/var/www/boot
 pattern=^[a-z]{6}[0-9]{3}$
 # deactivate dns checks. Only do this, if you really need it
 dnscheck=1
-# check hostnames also in the following domains to prevent conflicts. Never list DHCP.APPENDDOMAIN here!
+# List of DNS domains to check new hostnames against. Matching VMs are not allowed to boot. Never list DHCP.APPENDDOMAIN here!
 dnscheckzones= <<EOF
 some.zone
 some.other.zone
 EOF
+
+[dnscheckzones]
+# Optional additional DNS zones to check against set per network label
+# Example:
+# List of more DNS domains
+# ARC_NETWORK=some.other.network
 
 [modifyvm]
 # modify the VM so that it can boot only via PXE
@@ -185,7 +204,7 @@ EOF
 passthroughauth=0
 # disable certificate checking
 disablecertificatevalidation=0
-# limit LML to handle only VMs that have a NIC in the following network names
+# List of networks that a VM must be attached to (with at least one NIC) so that LML will care about it.
 # the names can be also a perl regex (^ and $ is added, don't use them!)
 networks=<<EOF
 arc.int
@@ -207,6 +226,14 @@ forceboot_target_field=Force Boot Target
 # here you can set some options for http
 # base_url= can be set to the http://<host>/<path> that should be prefixed to all LML scripts
 # if it is not set, then LML will try to guess it.
+
+[network_assignment]
+# List of permitted VM name regex patterns for each network label. Patterns are case-sensitive and used in qr() as-is.
+# Example:
+# ARC_NETWORK=<<EOF
+# ^is24
+# EOF
+# ARC_BACKUP_NETWORK=^backup.*
 
 [network_policy]
 catchall=vm_catchall_network
