--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -235,6 +235,14 @@ forceboot_target_field=Force Boot Target
 # EOF
 # ARC_BACKUP_NETWORK=^backup.*
 
+[vm_create]
+# List of configured network assignments. This list describes the search order for vm network
+# assignment. The assignment which has the first hit, will take precedence.
+network_search_order=<<EOF
+ARC_NETWORK
+ARC_BACKUP_NETWORK
+EOF
+
 [network_policy]
 catchall=vm_catchall_network
 # if hostname and network pattern will match, the network will be assigned on vm creation
