DEVEN-201 New Feature network-specific appenddomain and support networks without DHCP management * [appenddomains] section carries per-network appenddomain data * Started to refactor tests into single files per function * LML::Config::get_array to return array, get always returns string * LML::VMpolicy::validate_vm_dns_name active only if VM connected to   [dhcp] managed_networks * DNS Domain is now part of VM data, handled in LML::VM with   set_dns_domain and retrieved with dns_domain
NOTE: dhcp config file will contain data for all hosts, regardless if
they are managed by DHCP. ISC dhcpd does not care about extra data.

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -17,9 +17,9 @@ hostsfile=/etc/dhcp3/dhcp-hosts.conf
 # this is the domain we need to append to the VM name to construct a valid FQDN
 appenddomain=arc.int
 # NOTE: DNS is managed entirely through the DHCP integration, hence no configuration items here.
-# List of network labels for which we actually have to manage the DHCP server.
+# List of network label patterns for which we actually have to manage the DHCP server.
 managed_networks=<<EOF
-ARC_NETWORK
+ARC_.*
 EOF
 
 [appenddomains]
@@ -207,7 +207,7 @@ disablecertificatevalidation=0
 # List of networks that a VM must be attached to (with at least one NIC) so that LML will care about it.
 # the names can be also a perl regex (^ and $ is added, don't use them!)
 networks=<<EOF
-arc.int
+.*
 EOF
 # define the custom field name that contains a UNIX username to validate
 contactuserid_field=Contact User ID
