--- a/test/data/test.conf
+++ b/test/data/test.conf
@@ -4,7 +4,11 @@ datadir = test/temp
 
 [dhcp]
 hostsfile = test/temp/dhcp-hosts.conf
+appenddomain = test.data
 triggercommand = touch test/temp/triggercommand.txt
+
+[appenddomains]
+some_net = some.test
 
 [forceboot]
 default=menu/server.sl6.txt
@@ -12,6 +16,9 @@ server=menu/server.sl6.txt
 
 [vmscreenshot]
 push_max=25
+
+[vsphere]
+networks=arc.int
 
 [network_policy]
 catchall = vlan_auto
