DEVEN-201 Add logo and custom image to background image * Default custom image is "Sorry for the inconvenience" * Create unit test for background.pl * Uses zbarimg if installed to decode QR code image

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -252,3 +252,7 @@ network_pattern=[a-z]{3}$
 [vm_spec]
 host_announcement=http://host.arc.int/hostname-package/hostname-%s.arc.int.rpm
 host_spec=http://host.arc.int/configviewer/hosts/%s/data/vmProfile/esx.json
+
+[backgroundimage]
+# Customize the backgroundimage.pl script with a 400x150px png image
+customimage=sorry.png
