DEVEN-201 Error page uses QR code background image * Slight Refactoring * More unit tests * New get_full_url function in LML::Result to calculate the full   url for a given (partial) url.

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -50,6 +50,7 @@ unknown_redirect=pxelinux.cfg/default
 othervm_redirect=pxelinux.cfg/default
 
 # pxelinux configuration for error screen
+# QRIMAGE is replaced by the URL to a background image which contains the error details as a QR code
 error_main= <<EOF
 menu width 80
 menu color title        * #FFFFFFFF *
@@ -58,9 +59,12 @@ menu color sel          0 #ffffffff #00000000 none
 menu color unsel        0 #ffffffff #00000000 none
 menu color hotsel       0 #ffffffff #00000000 none
 
-menu vshift 5
-#menu rows 13
+MENU HELPMSGROW -3
+MENU HELPMSGENDROW -1
 
+menu background QRIMAGE
+
+menu vshift 1
 ui vesamenu.c32
 noescape 1
 allowoptions 0
