DEVEN-201 Use bin/ for c32 files

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -65,7 +65,7 @@ MENU HELPMSGENDROW -1
 menu background QRIMAGE
 
 menu vshift 1
-ui vesamenu.c32
+ui bin/vesamenu.c32
 noescape 1
 allowoptions 0
 prompt 0
@@ -76,7 +76,7 @@ EOF
 error_title=ERROR REPORT FOR VM
 # pxelinux configuration for error item on error screen
 error_item= <<EOF
-        kernel reboot.c32
+        kernel bin/reboot.c32
         text help
 Please fix these issues and press ENTER to reboot and try again
         endtext
@@ -101,7 +101,7 @@ label dummy
         menu label 
         kernel bin/reboot.c32
 
-ui vesamenu.c32
+ui bin/vesamenu.c32
 noescape 1
 allowoptions 0
 prompt 0
@@ -122,7 +122,7 @@ menu vshift 5
 menu title A FATAL ERROR HAS HAPPENED
 menu rows 2
 
-ui vesamenu.c32
+ui bin/vesamenu.c32
 noescape 1
 allowoptions 0
 prompt 0
@@ -130,7 +130,7 @@ timeout 0
 
 label error
 	menu label MESSAGE
-        kernel reboot.c32
+        kernel bin/reboot.c32
         text help
 Please stand up and call for help!
         endtext
