DEVEN-201 Reformat error page to give more space for error text

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -53,18 +53,16 @@ othervm_redirect=pxelinux.cfg/default
 # QRIMAGE is replaced by the URL to a background image which contains the error details as a QR code
 error_main= <<EOF
 menu width 80
+menu margin 0
+menu helpmsgrow -1
 menu color title        * #FFFFFFFF *
 menu color border       * #00000000 #00000000 none
 menu color sel          0 #ffffffff #00000000 none
 menu color unsel        0 #ffffffff #00000000 none
 menu color hotsel       0 #ffffffff #00000000 none
 
-MENU HELPMSGROW -2
-MENU HELPMSGENDROW -1
-
 menu background QRIMAGE
 
-menu vshift 1
 ui bin/vesamenu.c32
 noescape 1
 allowoptions 0
