Removing ERROR: prefix, because the return value (http status) already indicates an error * Additionally rename vm_create section in config to new_vm

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -237,7 +237,7 @@ forceboot_target_field=Force Boot Target
 # EOF
 # ARC_BACKUP_NETWORK=^backup.*
 
-[vm_create]
+[new_vm]
 # List of configured network assignments. This list describes the search order for vm network
 # assignment. The assignment which has the first hit, will take precedence.
 network_search_order=<<EOF
