DEVEN-201 Add OCR-based test target

--- a/doc/examples/lml-system-test.ini
+++ b/doc/examples/lml-system-test.ini
@@ -1,3 +1,7 @@
+# Example config for vm_system_test.pl
+# Put in ./lml-system-test.ini or (for development) into ~/.lml-system-test.ini
+#
+
 [defaults]
 # timeout while waiting for qr code
 boot_timeout            = 10
