updated example lml-system-test.ini to show the possibility to define additional verifications for result = qrdata

--- a/doc/examples/lml-system-test.ini
+++ b/doc/examples/lml-system-test.ini
@@ -13,10 +13,20 @@ folder              = /YourFolder/YourSubfolder
 lmlhostpattern          = regex-of-LML-server(s)
 
 
-[create and force boot]
-result = qrdata
+[create vm with static FG in static network and force boot]
+result              = qrdata
+# if no expect key is given, only the static inferable attributes like qr-code-age, 
+# vm_path (folder), lml_host, vm_uuid, host, host_name, contact user and expiration  date are verified 
 
-[no static VM in dynamic network]
+[create vm with dynmaic FG in dynamic network and force boot]
+result              = qrdata
+vm_name_prefix      = some_test_vm_prefix
+# verify the only one nic for our dynamic network was assigned
+expect = <<EOF
+.*"MAC"\s*:\s*{\s+.*\s*[^}]*"dynamic_network_label"\s+}.*
+EOF
+
+[no static VM in dynamic network]  # this is the name of the testcase
 result = qr
 vm_name_prefix          = static_prefix
 force_network           = non-static network
@@ -25,7 +35,7 @@ expect = <<EOF
 .*ERRORCOUNT.*1.*
 EOF
 
-[no dynamic VM in static network]
+[no dynamic VM in static network]  # this is the name of the testcase
 result = qr
 vm_name_prefix          = some_thing_dynamic
 force_network           = static_network
