Remove ' from default.conf and refactor LAB data structure to be less VMware specific (we do property mapping in backend now)

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -1,7 +1,7 @@
 # THIS IS THE LML DEFAULT CONFIGURATION! IT GIVES AN EXAMPLE FOR ALL
 # CONFIGURATION ITEMS THAT LML KNOWS.
 #
-# PLEASE DON'T EDIT THIS FILE!!!!!
+# PLEASE DONT EDIT THIS FILE!!!!!
 #
 # INSTEAD, CREATE ADDITIONAL CONFIGURATION FILES LIKE /etc/lml/*.conf
 #
@@ -42,10 +42,10 @@ display_filter_vm_path=^[^/]+/vm/(.*)$
 # think twice before changing this as pxelinux.0 uses that as a built-in default in case pxelinux.pl throws a 500
 # set to 0 to disable redirecting
 default_redirect=pxelinux.cfg/default
-# redirect target for non-VMs (anything that LML can't find in the vSphere inventory)
+# redirect target for non-VMs (anything that LML cant find in the vSphere inventory)
 # set to 0 to disable redirecting
 unknown_redirect=pxelinux.cfg/default
-# redirect target for VMs that don't match our networks
+# redirect target for VMs that dont match our networks
 # set to 0 to disable redirecting
 othervm_redirect=pxelinux.cfg/default
 
@@ -137,7 +137,7 @@ EOF
 
 # local path to pxelinux.cfg directory, needed for forceboot autodetection
 # This is the local path for the URI given to pxelinux as TFTP path prefix
-# don't include the pxelinux.cfg directory itself!
+# dont include the pxelinux.cfg directory itself!
 pxelinuxcfg_path=/var/www/boot
 
 [forceboot]
@@ -207,7 +207,7 @@ passthroughauth=0
 # disable certificate checking
 disablecertificatevalidation=0
 # List of networks that a VM must be attached to (with at least one NIC) so that LML will care about it.
-# the names can be also a perl regex (^ and $ is added, don't use them!)
+# the names can be also a perl regex (^ and $ is added, dont use them!)
 networks=<<EOF
 .*
 EOF
