Adding the new group_pattern parameter with description to our default.conf

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -150,6 +150,11 @@ pxelinuxcfg_path=/var/www/boot
 [hostrules]
 # hostnames must match this Perl pattern
 pattern=^[a-z]{6}[0-9]{3}$
+# The group_pattern is used to identify similar vms by their name. When a vm will be
+# created, the creation script will take care, that this vm is not going to an host with
+# similar vm(s) on it. A brace is needed! If this parameter is not set or no braces are defined
+# the distribution function will be deactivated.
+group_pattern=[a-z]{3}([a-z]{3})[0-9]{3}
 # deactivate dns checks. Only do this, if you really need it
 dnscheck=1
 # List of DNS domains to check new hostnames against. Matching VMs are not allowed to boot. Never list DHCP.APPENDDOMAIN here!
