Introducing new configuration parameters for vm to esx host assignment

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -150,13 +150,33 @@ pxelinuxcfg_path=/var/www/boot
 [hostrules]
 # hostnames must match this Perl pattern
 pattern=^[a-z]{6}[0-9]{3}$
+
 # The group_pattern is used to identify similar vms by their name. When a vm will be
 # created, the creation script will take care, that this vm is not going to an host with
 # similar vm(s) on it. A brace is needed! If this parameter is not set or no braces are defined
 # the distribution function will be deactivated.
 group_pattern=[a-z]{3}([a-z]{3})[0-9]{3}
+
+# You can define the assignment of vms here. Beginning with defining the rulesets here. The
+# ruleset name will be used in front of the ruleset patterns to identify them
+#vm_host_assignment=<<EOF
+#tst_dev
+#pro
+#EOF
+
+# This is an ruleset which allows all vms with dev or tst as the first three letters of their
+# hostname on esx hosts with tst as the first three letters in the hostname
+#tst_dev.vm_pattern=(dev|tst).*
+#tst_dev.host_pattern=(tst).*
+
+# This ruleset said, that only hosts with pro as the first threee letters in the hostname
+# will be assigned to esx hosts with pro as the first three letters in their hostname
+#pro.vm_pattern=(pro).*
+#pro.host_pattern=(pro).*
+
 # deactivate dns checks. Only do this, if you really need it
 dnscheck=1
+
 # List of DNS domains to check new hostnames against. Matching VMs are not allowed to boot. Never list DHCP.APPENDDOMAIN here!
 dnscheckzones= <<EOF
 some.zone
