DEVEN-199 LML version is shown in web app (index.html)

--- a/src/apache/lab-manager-light.conf
+++ b/src/apache/lab-manager-light.conf
@@ -24,6 +24,7 @@ Alias /lml /usr/lib/lml
         Options +ExecCGI
         AddHandler cgi-script .pl
         DirectoryIndex index.pl
+        DirectoryIndex index.html
         Allow From All
 </Directory>
 
