DEVEN-199 Introduce concept of VM folder paths to LML * speed up API retrieval by doing folder paths ourselves * show select list of existing folder paths in new vm UI * start to refactor LML::Lab tests into subfolder

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -29,7 +29,7 @@ EOF
 [gui]
 # The GUI should filter the VM path, () denotes the part displayed to the user
 # this removes the leading <datacenter-name>/vm>/ stuff from the display name
-display_filter_vm_path=^[^/]+/vm/(.*)$
+display_filter_vm_path=^[^/]+/vm(.*)$
 
 # define a list of variables here. The pxelinux-proxy.pl script will take the KEY as
 # the name of the TOKEN (in *.pxelinux files) and the VALUE as the token replacement
