ITPRO-88 Add new feature to run trigger on VM delete

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -205,6 +205,9 @@ failoninvalidforceboot=1
 # It seems like LWP ignores the no_proxy setting for HTTPS. ATM the only workaround seems to be to
 # disable proxy settings globally.
 disableproxy=0
+# run this optional command after deleting a VM. Keys from LML::Lab are replaced if they are in the %%%TOKEN%%% form
+# default is disabled, this is an example
+# delete_triggercommand=curl http://host/sys/delete/%%%NAME%%%.%%%DNS_DOMAIN%%%
 
 [vmscreenshot]
 # enable vmscreenshot.pl
