--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -205,9 +205,12 @@ failoninvalidforceboot=1
 # It seems like LWP ignores the no_proxy setting for HTTPS. ATM the only workaround seems to be to
 # disable proxy settings globally.
 disableproxy=0
+
+[triggers]
 # run this optional command after deleting a VM. Keys from LML::Lab are replaced if they are in the %%%TOKEN%%% form
 # default is disabled, this is an example
-# delete_triggercommand=curl http://host/sys/delete/%%%NAME%%%.%%%DNS_DOMAIN%%%
+# vmdestroy=curl http://host/sys/destroy/%%%NAME%%%.%%%DNS_DOMAIN%%%
+# vmdetonate=curl http://host/sys/detonate/%%%NAME%%%.%%%DNS_DOMAIN%%%
 
 [vmscreenshot]
 # enable vmscreenshot.pl
